[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "NuRadioMC"
version = "3.0.0-dev"
authors = ["Christian Glaser et al."]
homepage = "https://github.com/nu-radio/NuRadioMC"
documentation = "https://nu-radio.github.io/NuRadioMC/main.html"
license = "GPL-3.0-or-later"
packages = [
    {include = "NuRadioMC"},
    {include = "NuRadioReco"}
]
readme = "README.md"
include = ["changelog.txt"]
description = "A Monte Carlo simulation package for radio neutrino detectors and reconstruction framework for radio detectors of high-energy neutrinos and cosmic-rays."
# classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]

[tool.poetry.dependencies]
numpy = "*"
scipy = "*"
tinydb = ">=4.1.1"
tinydb-serialization = ">=2.1"
aenum = "*"
astropy = "*"
radiotools = ">=0.2.1"
cython = "*"
dash = ">=2.0"
future = "*"
h5py = "*"
peakutils = "*"
pymongo = "*"
pyyaml = "*"
awkward = "*"
python = "^3.7"
matplotlib = "*"
requests = "*"
toml = ">=0.10.2"
uproot = "*"
importlib-metadata = {version = ">=4.8.1", python = "<3.8"}
numba = "*"
filelock = "*"
Sphinx = {version = "*", optional = true}
sphinx-rtd-theme = {version = "*", optional = true}
numpydoc = {version = "*", optional = true}
proposal = {version = "7.6.2", optional = true}
pygdsm = {git = "https://github.com/telegraphic/pygdsm", optional = true}
pylfmap = {version = "*", optional = true}
nifty5 = {git = "https://gitlab.mpcdf.mpg.de/ift/nifty.git", branch="NIFTy_5", optional = true}
pypocketfft = {git = "https://gitlab.mpcdf.mpg.de/mtr/pypocketfft", optional = true}
MCEq = {version = "*", optional = true}
crflux = {version = "*", optional = true}
mattak = {git = "https://github.com/RNO-G/mattak", optional = true}
rnog-runtable = {git = "ssh://git@github.com/RNO-G/rnog-runtable.git", optional = true}
cr-pulse-interpolator = {git = "https://github.com/nu-radio/cr-pulse-interpolator", optional = true}
pre-commit = {version = "*", optional = true}

[tool.poetry.dev-dependencies]
pre-commit = "*"

[tool.poetry.extras]
dev = ["pre-commit", "Sphinx", "sphinx-rtd-theme", "numpydoc"]
proposal = ["proposal"]
galacticnoise = ['pygdsm', 'pylfmap']
ift-reco = ['nifty5', 'pypocketfft']
muon-flux = ['MCEq', 'crflux']
RNO-G = ["mattak"]
RNO-G-extras = ["rnog-runtable"]
cr_interpolator = ["cr-pulse-interpolator"]
ALL = ["proposal", "pygdsm", 'pylfmap', "nifty5", "pypocketfft", "MCEq", "crflux", "mattak", "cr-pulse-interpolator"]
