[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "NuRadioMC"
version = "3.0.2"
authors = ["Christian Glaser et al."]
homepage = "https://github.com/nu-radio/NuRadioMC"
documentation = "https://nu-radio.github.io/NuRadioMC/main.html"
license = "GPL-3.0-or-later"
packages = [
    {include = "NuRadioMC"},
    {include = "NuRadioReco"}
]
readme = "README.md"
include = ["changelog.txt"]
description = "A Monte Carlo simulation package for radio neutrino detectors and reconstruction framework for radio detectors of high-energy neutrinos and cosmic-rays."
# classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]

[tool.poetry.dependencies]
numpy = "*"
scipy = "*"
tinydb = ">=4.1.1"
tinydb-serialization = ">=2.1"
aenum = "*"
astropy = "*"
radiotools = ">=0.2.1"
cython = "*"
dash = ">=2.0"
future = "*"
h5py = "*"
peakutils = "*"
pymongo = "*"
pyyaml = "*"
awkward = "*"
python = "^3.7"
matplotlib = "*"
requests = "*"
toml = ">=0.10.2"
uproot = "*"
importlib-metadata = {version = ">=4.8.1", python = "<3.8"}
numba = "*"
filelock = "*"
Sphinx = {version = "*", optional = true}
sphinx-rtd-theme = {version = "*", optional = true}
numpydoc = {version = "*", optional = true}
proposal = {version = "7.6.2", optional = true}
pylfmap = {version = "*", optional = true}
healpy = {version = "*", optional = true}
MCEq = {version = "*", optional = true}
crflux = {version = "*", optional = true}
cr-pulse-interpolator = {version = ">=1.1.1", optional = true}
pre-commit = {version = "*", optional = true}

[tool.poetry.dev-dependencies]
pre-commit = "*"

[tool.poetry.extras]
dev = ["pre-commit", "Sphinx", "sphinx-rtd-theme", "numpydoc"]
proposal = ["proposal"]
galacticnoise = ['pylfmap', 'healpy']
muon-flux = ['MCEq', 'crflux']
cr_interpolator = ["cr-pulse-interpolator"]
ALL = ["proposal", "pylfmap", "healpy", "MCEq", "crflux", "cr-pulse-interpolator"]
